add custom server handlers
